2012-07-18 David Williams <dwilliams@ricohsv.com>
      * db/source/PPD/Gestetner/PS/Gestetner-MP_9002_PS.ppd,
        db/source/PPD/Gestetner/PS/Gestetner-MP_7502_PS.ppd,
        db/source/PPD/Gestetner/PS/Gestetner-MP_6002_PS.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_9002_PXL.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_7502_PXL.ppd,
        db/source/PPD/Gestetner/PXL/Gestetner-MP_6002_PXL.ppd,
        db/source/PPD/Infotec/PS/Infotec-MP_9002_PS.ppd,
        db/source/PPD/Infotec/PS/Infotec-MP_7502_PS.ppd,
        db/source/PPD/Infotec/PS/Infotec-MP_6002_PS.ppd,
        db/source/PPD/Infotec/PXL/Infotec-MP_9002_PXL.ppd,
        db/source/PPD/Infotec/PXL/Infotec-MP_7502_PXL.ppd,
        db/source/PPD/Infotec/PXL/Infotec-MP_6002_PXL.ppd,
        db/source/PPD/Lanier/PS/Lanier-MP_9002_PS.ppd,
        db/source/PPD/Lanier/PS/Lanier-MP_7502_PS.ppd,
        db/source/PPD/Lanier/PS/Lanier-MP_6002_PS.ppd,
        db/source/PPD/Lanier/PXL/Lanier-MP_9002_PXL.ppd,
        db/source/PPD/Lanier/PXL/Lanier-MP_7502_PXL.ppd,
        db/source/PPD/Lanier/PXL/Lanier-MP_6002_PXL.ppd,
        db/source/PPD/NRG/PXL/NRG-MP_9002_PXL.ppd,
        db/source/PPD/NRG/PXL/NRG-MP_7502_PXL.ppd,
        db/source/PPD/NRG/PXL/NRG-MP_6002_PXL.ppd,
        db/source/PPD/NRG/PS/NRG-MP_9002_PS.ppd,
        db/source/PPD/NRG/PS/NRG-MP_7502_PS.ppd,
        db/source/PPD/NRG/PS/NRG-MP_6002_PS.ppd,
        db/source/PPD/Ricoh/PS/Ricoh-Aficio_MP_9002_PS.ppd,
        db/source/PPD/Ricoh/PS/Ricoh-Aficio_MP_7502_PS.ppd,
        db/source/PPD/Ricoh/PS/Ricoh-Aficio_MP_6002_PS.ppd,
        db/source/PPD/Ricoh/PXL/Ricoh-Aficio_MP_9002_PXL.ppd,
        db/source/PPD/Ricoh/PXL/Ricoh-Aficio_MP_7502_PXL.ppd,
        db/source/PPD/Ricoh/PXL/Ricoh-Aficio_MP_6002_PXL.ppd,
        db/source/PPD/Savin/PXL/Savin-MP_9002_PXL.ppd,
        db/source/PPD/Savin/PXL/Savin-MP_7502_PXL.ppd,
        db/source/PPD/Savin/PXL/Savin-MP_6002_PXL.ppd,
        db/source/PPD/Savin/PS/Savin-MP_9002_PS.ppd,