@@ -17,6 +17,13 @@
       <charset>us-ascii</charset>
     </text>
   </lang>
+  <autodetect>
+    <general>
+      <commandset>PCL5E,PCL6</commandset>
+      <manufacturer>Samsung</manufacturer>
+      <model>ML-1450</model>
+    </general>
+  </autodetect>
   <functionality>A</functionality>
   <driver>pxlmono</driver>
   <comments>
