@@ -1,3 +1,7 @@
+2012-08-28 Tim Waugh <twaugh@redhat.com>
+	* db/source/printer/Samsung-ML-1450.xml: Added IEEE 1284
+	  Device ID (RH bug #844686).
+
 2012-07-18 David Williams <dwilliams@ricohsv.com>
       * db/source/PPD/Gestetner/PS/Gestetner-MP_9002_PS.ppd,
         db/source/PPD/Gestetner/PS/Gestetner-MP_7502_PS.ppd,
